--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,7 +5,7 @@
   border: none;
   resize: none;
   border-bottom: 6px solid #535149;
-  font-weight: bold;
+  font-weight: normal;
   margin-bottom: 12px;
   height: 50px;
 }
@@ -14,7 +14,6 @@
   background-color: #4056A1;
   font-family: 'Bungee', sans-serif;
   color: #ffffff;
-  
 }
 
 .tweetCounter{
