--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,10 +1,16 @@
 header{
+top: 120px;
+
+
   height: 400px;
   width: 100%;
-
-  position: relative;
+  
+  /* margin-top: -262px; */
+  /* position: relative; */
+  position: fixed;
+  z-index: 1000;
   background-color:#a18440;
-  /* position: absolute -->*/
+  /* position: absolute */
   text-align: center;
   font-family: Source Sans Pro, sans-serif;
   background-color: #a18440;
