--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,6 +20,8 @@ body{
   font-size: 24px;
   font-family: Source Sans Pro, sans-serif;
   margin-top: 120px;
+  flex: display;
+  margin-top: 0px
 }
 
 /*
@@ -30,4 +32,10 @@ body{
 width: 90%;
 background-color: #f4f1ec;
 margin: auto;
+
+postion: absolute;
+ }
+
+ main .new-tweet{
+  /* margin-top: 382px; */
  }
