--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -28,7 +28,8 @@ opacity: 1;
   align-items: center;
   width: 95%;
   margin: auto;
-  margin-top: 15px
+  margin-top: 15px;
+  position: relative;
 }
 
 .tweetUserName{
