tweeter is now responsive

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,16 +13,28 @@ top: 120px;
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
+
 @media only screen and (min-width: 1024px) {
   header {
    
     background-color: #a18440;
     height: 25rem;
-    width: 25rem;
+    width: 30%;
+    margin-top: 30px;
+    margin-left: 30px;
   }
 
   .desktopView{
     display: flex;
     justify-content: space-between;
+  /* width:70%; */
+
+    
   }
+
+  .desktopView .mainContainer{
+    width: 70%;
+  }
+
+
 } 
